# ShardX

./: .dockerignore  .gitattributes  .gitignore  .replit  0_pre-check.txt  CONTRIBUTING.md  Cargo.toml  Cargo.toml.render  Dockerfile  Dockerfile.heroku  Dockerfile.new  Dockerfile.render  Dockerfile.simple  LICENSE  Procfile  README.md  ROADMAP.md  app.json  auto_install.sh  azure-pipelines.yml  benchmark.py  build-docker.sh  cloudformation.yml  digital_ocean.yml  docker-compose.debug.yml  docker-compose.simple.yml  docker-compose.yml  fly.sh  fly.toml  heroku.yml  install.sh  mac_install.sh  netlify.toml  non_interactive_install.sh  one_click_install.sh  quick_install.sh  quick_start.sh  railway.json  railway.toml  render-free.md  (+8 more)
.cargo/: config.toml
.fly/: launch.toml
benches/: transaction_benchmark.rs
config/: default.toml  development.toml  production.toml  test.toml
contracts/solana/shardx_bridge/: Cargo.toml
contracts/solana/shardx_bridge/src/: lib.rs
data/: .gitignore  README.md
docs/: consensus.md  developer_ecosystem.md  installation.md  node_incentive_model.md  performance_optimization.md  phase2_architecture.md  phase2_implementation_plan.md  quickstart.md  security_enhancement.md  test_results_summary.md  validator_setup.md
examples/: advanced_chart_example.rs  async_benchmark.rs  cross_shard_benchmark.rs  transaction_prediction_example.rs
ibm-cloud/: manifest.yml
install_scripts/: README.md  dev_install.sh  enterprise_install.sh  minimal_install.sh
kubernetes/: README.md  deployment.yaml  kustomization.yaml  service.yaml  storage.yaml
models/: README.md  priority.onnx  priority_dev.onnx  priority_test.onnx
monitoring/: prometheus.yml
nginx/: default.conf
oracle-cloud/: terraform.tf
pre-check/: 1_Set up job.txt  24_Post Checkout code.txt  25_Complete job.txt  2_Pull rhysd_actionlintlatest.txt  3_Checkout code.txt  4_Set up Rust.txt  5_Cache dependencies.txt  6_Check for duplicate module files.txt  7_Check for reserved keywords in module names.txt  system.txt
redis/: redis.conf
scripts/: backup.sh  build-docker.sh  build_and_push.sh  deploy-all.sh  deploy-fly-fix.sh  deploy-fly-web.sh  deploy-fly.sh  deploy-heroku-fix.sh  deploy-heroku.sh  deploy-railway.sh  deploy-render-fix.sh  deploy-render.sh  docker-entrypoint.sh  entrypoint.sh  install.sh  linux_install.sh  mac_install.sh  placeholder.sh  replit-build.sh  replit-run.sh  run.ps1  run.sh  shardx.service  update_all.sh  windows_install.ps1
src/: ai.rs  api.rs  api_handlers.rs  api_handlers.rs.bak  cli.rs  consensus.rs  cross_shard.rs  dex.rs  error.rs  lib.rs  main.rs  metrics.rs  multisig.rs  node.rs  sharding.rs  transaction.rs  transaction_analysis.rs  wallet.rs  web_server.rs
test_nodes/: run_tests.sh  start_nodes.sh  stop_nodes.sh  test_transactions.sh
test_results/: multi_node_test_results.md  test_summary.md  transaction_test.md
tests/: coverage_runner.rs  integration_test.js  integration_test.rs  multi_node_test.sh  unit_test.rs
tools/: dependency_updater.sh  fix-modules.sh  parallel_test.sh
web/: Dockerfile  advanced_charts.html  server.js  (+11 more)
(+294 files in other folders)
