[package]
name = "shardx"
version = "0.1.0"
edition = "2021"
description = "ShardX - High-performance blockchain with Proof of Flow consensus"
authors = ["ShardX Team"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }  # serdeサポートを追加
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
dashmap = "5.4"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
base64 = "0.13"  # base64エンコード/デコード用

# 以下の依存関係のバージョンを明示的に指定して、互換性の問題を回避
litemap = "=0.7.4"  # 0.7.5以前のバージョンを使用
hashbrown = "=0.14.3"
indexmap = "=2.1.0"

[package.metadata.docker]
# Rustのバージョン要件を明示
rust_version = "1.81"
