[package]
name = "shardx"
version = "0.2.0"
edition = "2021"
authors = ["ShardX Team <info@shardx.org>"]
description = "高性能ブロックチェーンプラットフォーム"
license = "MIT"
repository = "https://github.com/enablerdao/ShardX"

[dependencies]
# 基本ユーティリティ
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
num_cpus = "1.16"
base64 = "0.13"

# 暗号関連
blake3 = "1.4"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"

# 非同期処理
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# 並列処理
rayon = "1.7"
threadpool = "1.8"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.11"
prost-types = "0.11"

# ネットワーク
warp = "0.3"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# ストレージ
rocksdb = "0.21"
lru = "0.11"
dashmap = "5.4"

# 互換性のために必要なパッケージ
litemap = "=0.7.4"
hashbrown = "=0.14.3"
indexmap = "=2.1.0"

# AI関連
tract-onnx = "0.20"
ndarray = "0.15"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
prost-build = "0.11"

[[bench]]
name = "transaction_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docker]
# Rustのバージョン要件を明示
rust_version = "1.81"
