[package]
name = "shardx_bridge"
version = "0.1.0"
edition = "2021"
description = "Solana program for ShardX cross-chain bridge"
authors = ["ShardX Team <info@shardx.org>"]
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"]